overlay issue on mobile screens for hero + nav

--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -53,7 +53,7 @@
             min-width:100%;
             z-index: 2 !important;
         }
-        @media screen and (max-width: 767px) {
+        @media screen and (max-width: 1023px) {
             .bg{
                 z-index: 1;
             }
